# MAI_GeoMS

./: CMakeLists.txt  README.md  Weather.cpp  Weather.h  WeatherForecast.cpp  WeatherForecast.h  conanfile.txt  main.cpp
